# Chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Engine/: CMakeLists.txt
Engine/AnimatedSprite/: AnimatedSprite.cpp  AnimatedSprite.hpp
Engine/Clickable/: Clickable.cpp  Clickable.hpp
Engine/CollisionShape/: CollisionShape.hpp
Engine/Entity/: Entity.cpp  Entity.hpp
Engine/GUI/: Button.cpp  Button.hpp  Label.cpp
Engine/Game/: Game.cpp  Game.hpp
Engine/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
Engine/Scene/: Scene.cpp  Scene.hpp
Engine/SpriteBatch/: QuickSprite.cpp  QuickSprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp
Engine/Updatable/: Updatable.hpp
Engine/WorldEntity/: WorldEntity.cpp  WorldEntity.hpp
src/: CMakeLists.txt
src/Chess/: BoardEntity.cpp  BoardEntity.hpp  BoardManager.cpp  BoardManager.hpp  Chess.hpp  FloatingPiece.cpp  FloatingPiece.hpp  GameOfChess.cpp  GameOfChess.hpp  Manager.cpp  Manager.hpp  Piece.cpp  Piece.hpp  Square.hpp  Tile.cpp  Tile.hpp  TileManager.cpp  TileManager.hpp
src/Chess/Logic/: BasePiece.cpp  BasePiece.hpp  Board.cpp  Board.hpp  Game.cpp  Game.hpp  Knight.cpp  Knight.hpp  Move.cpp  Move.hpp  Pawn.cpp  Pawn.hpp  PieceView.cpp  PieceView.hpp  Position.hpp  Rook.cpp  Rook.hpp  Square.cpp  Square.hpp
src/Chess/Logic/Pieces/: BasePiece.cpp  BasePiece.hpp  Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
src/Scene/: ChessScene.cpp  ChessScene.hpp  MenuScene.cpp  MenuScene.hpp
src/Scenes/: ChessScene.cpp  ChessScene.hpp  MenuScene.cpp
